fixed music links with z-index

--- a/style/home.scss
+++ b/style/home.scss
@@ -32,7 +32,7 @@ body {
         display: flex;
         justify-content: space-between;
         padding: 0 6px 0 0;
-        z-index: 100;
+        z-index: 1;
 
         a {
             padding: 0 32px;
@@ -140,9 +140,10 @@ body {
                 border: none;
                 text-align: center;
                 margin-top: 50px;
-                z-index: -1;
+               
 
                 .card-image {
+                    z-index: 0;
                     img {
                         width: 70%;
                     }
@@ -321,7 +322,8 @@ body {
             height: auto;
             background-color: #fff;
             position: fixed !important;
-            z-index: 2;
+            z-index: 1;
+      
 
             #mob-logo {
                 width: 40%;
@@ -484,6 +486,7 @@ body {
                     width: 100% !important;
 
                     .card-image {
+                        z-index: 0;
                         img {
                             width: 80%;
                         }
